--- a/demo.html
+++ b/demo.html
@@ -13,10 +13,10 @@
 			line-height: 50px;
 			color: white;
 			text-decoration: none;
-			background: url(images/bg.png) no-repeat;
+			background: url(bg.png) no-repeat;
 		}
 		.nav a:hover {
-			background: url(images/bg2.png) no-repeat;
+			background: url(bg2.png) no-repeat;
 		}
 	</style>
 </head>
